# TabICL-finetuning

./: .gitignore  README.md  finetuning.ipynb  pyproject.toml  test.ipynb
tabicl/src/tabicl/sklearn/: classifier.py
