[project]
name = "fmproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "einops>=0.8.0",
    "einx>=0.3.0",
    "hydra-core>=1.3.2",
    "liac-arff>=2.5.0",
    "matplotlib>=3.9.2",
    "ml-collections>=1.1.0",
    "numpy>=2.1.3",
    "optuna>=4.3.0",
    "pandas>=2.2.3",
    "peft>=0.17.0",
    "plotly>=6.0.1",
    "polars>=1.16.0",
    "pyarrow>=19.0.1",
    "pytorch-lightning>=2.4.0",
    "scikit-learn>=1.5.2",
    "simple-parsing>=0.1.6",
    "tensorboard>=2.18.0",
    "torch>=2.5.1",
    "torch-summary>=1.4.5",
    "torchaudio>=2.5.1",
    "transformers>=4.53.2",
    "utils>=1.0.2",
    "xformers>=0.0.28.post3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.9.1",
]
